Fix page navigation buttons are hidden in some cases - Increase page navigation button's z-index to 1000.

--- a/viewer/res-dev/scss/ui.arrows.scss
+++ b/viewer/res-dev/scss/ui.arrows.scss
@@ -20,6 +20,7 @@ $button-offset: 5px;
 	background: transparent;
 	cursor: pointer;
 	opacity: 0;
+	z-index: 1000;
 	[data-vivliostyle-viewer-status="loading"] & {
 		opacity: 0;
 	}
